--- a/education/unbk-online/index.html
+++ b/education/unbk-online/index.html
@@ -1,1 +1,22 @@
 
+
+<head>
+<script type="text/javascript" src="js/s2j.js"></script>
+</head>
+
+<body>
+
+TEST: Displaying SWF with JavaScript and HTML5 Canvas... <br><br>
+
+<div id="myFlashDiv" style="width:800px; height:800px;"></div>
+
+
+<script type="text/javascript">
+
+var mySWF = swf2js;
+mySWF.load('smp/mtk.swf', {"tagId": "myFlashDiv"});
+
+
+</script>
+
+</body>
