--- a/education/unbk-online/index.html
+++ b/education/unbk-online/index.html
@@ -14,7 +14,7 @@ TEST: Displaying SWF with JavaScript and HTML5 Canvas... <br><br>
 <script type="text/javascript">
 
 var mySWF = swf2js;
-mySWF.load('assets_unbk/smp/mtk.swf', {"tagId": "myFlashDiv"});
+mySWF.load('assets_unbk/smp/test.swf', {"tagId": "myFlashDiv"});
 
 
 </script>
