--- a/education/unbk-online/test/index.html
+++ b/education/unbk-online/test/index.html
@@ -6,6 +6,6 @@ TEST: Displaying SWF with JavaScript and HTML5 Canvas... <br><br>
 <div id="myFlashDiv" style="width:800px; height:800px;"></div>
 <script type="text/javascript">
 var mySWF = swf2js;
-mySWF.load('quiz.swf', {"tagId": "myFlashDiv"});
+mySWF.load('asseets_unbk/smp/quiz.swf', {"tagId": "myFlashDiv"});
 </script>
 </body>
