--- a/education/unbk-online/index.html
+++ b/education/unbk-online/index.html
@@ -8,6 +8,6 @@ TEST: Displaying SWF with JavaScript and HTML5 Canvas... <br><br>
 <div id="myFlashDiv" style="width:800px; height:800px;"></div>
 <script type="text/javascript">
 var mySWF = swf2js;
-mySWF.load('assets_unbk/smp/ipa.swf', {"tagId": "myFlashDiv"});
+mySWF.load('assets_unbk/smp/quiz.swf', {"tagId": "myFlashDiv"});
 </script>
 </body>
